--- a/public/css/site.css
+++ b/public/css/site.css
@@ -89,3 +89,7 @@ thead > tr > th {
     font-weight: 500;
     border-bottom: 2px solid #6b6b6b !important;
 }
+
+a {
+    color: mediumspringgreen;
+}
