--- a/public/css/site.css
+++ b/public/css/site.css
@@ -65,6 +65,10 @@ input {
     color: #DCDDDE !important;
 }
 
+input:read-only {
+    color: #a3a2a2 !important;
+}
+
 input[type="submit"], button {
     border-radius: 5px;
     background-color: #636770 !important;
@@ -74,6 +78,7 @@ input[type="submit"], button {
 input[type="submit"]:hover, button {
     background-color: #797d88 !important;
 }
+
 
 img {
     border-radius: 10px !important;
