--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -1,6 +1,9 @@
 <div class="row">
     <div class="col-md-12">
-        <h2>Departments</h2>
+        <h2>
+            Departments
+            <a href="/departments/add" class="btn btn-success pull-right">Add New Department</a>
+        </h2>
         <hr />
         <div class="table-responsive">
             <table class="table">
@@ -12,14 +15,15 @@
                 </thead>
                 {{#each departments}}
                     <tr>
-                        <td><a href="/employee?department={{this.departmentId}}">{{this.departmentId}}</a></td>
-                        <td><a href="/employee?department={{this.departmentId}}">{{this.departmentName}}</a></td>
+                        <td><a href="/employee?department={{this.dataValues.departmentId}}">{{this.dataValues.departmentId}}</a></td>
+                        <td><a href="/department/{{this.dataValues.departmentId}}">{{this.dataValues.departmentName}}</a></td>
+                        <td><a href="/departments/delete/{{this.dataValues.departmentId}}" class="btn btn-danger">remove</a></td>
                     </tr>
                 {{/each}}
             </table>
         </div>
     </div>
-    {{#unless employees}}
+    {{#unless departments}}
         <div class="col-md-12 text-center">
             <strong>{{message}}</strong>
         </div>
