--- a/views/employee.hbs
+++ b/views/employee.hbs
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-        <h2>{{employee.firstName}} {{ employee.lastName}} - Employee: {{ employee.employeeNum}}</h2>
+        <h2>{{viewData.employee.dataValues.firstName}} {{ viewData.employee.dataValues.lastName}} - Employee: {{ viewData.employee.dataValues.employeeNum}}</h2>
         <hr />
         <form method="post" action="/employee/update">
             <fieldset>
@@ -10,29 +10,29 @@
                         <div class="form-group">
                             <label for="firstName">First Name:</label>
                             <input class="form-control" id="firstName" name="firstName" type="text" value="{{
-                            employee.firstName}}" />
+                            viewData.employee.dataValues.firstName}}" />
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="lastName">Last Name:</label>
                             <input class="form-control" id="lastName" name="lastName" type="text" value="{{
-                            employee.lastName}}" />
+                            viewData.employee.dataValues.lastName}}" />
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <input class="form-control" id="employeeNum" name="employeeNum" type="hidden" value="{{employee.employeeNum}}">
+                    <input class="form-control" id="employeeNum" name="employeeNum" type="hidden" value="{{viewData.employee.dataValues.employeeNum}}">
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="email">Email:</label>
-                            <input class="form-control" id="email" name="email" type="text" value="{{employee.email}}">
+                            <input class="form-control" id="email" name="email" type="text" value="{{viewData.employee.dataValues.email}}">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="SSN">Social Security Num:</label>
-                            <input class="form-control" id="SSN" name="SSN" type="text" value="{{employee.SSN}}" readonly="">
+                            <input class="form-control" id="SSN" name="SSN" type="text" value="{{viewData.employee.dataValues.SSN}}" readonly="">
                         </div>
                     </div>
                 </div>
@@ -40,23 +40,23 @@
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="addressStreet">Address (Street):</label>
-                            <input class="form-control" id="addressStreet" name="addressStreet" type="text" value="{{employee.addressStreet}}">
+                            <input class="form-control" id="addressStreet" name="addressStreet" type="text" value="{{viewData.employee.dataValues.addressStreet}}">
                         </div>
                     </div>
                     <div class="col-md-3">
                         <label for="addressCity">Address (City):</label>
-                        <input class="form-control" id="addressCity" name="addressCity" type="text" value="{{employee.addressCity}}">
+                        <input class="form-control" id="addressCity" name="addressCity" type="text" value="{{viewData.employee.dataValues.addressCity}}">
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="addressState">Address (State):</label>
-                            <input class="form-control" id="addressState" name="addressState" type="text" value="{{employee.addressState}}">
+                            <input class="form-control" id="addressState" name="addressState" type="text" value="{{viewData.employee.dataValues.addressState}}">
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="addressPostal">Address (Zip Code):</label>
-                            <input class="form-control" id="addressPostal" name="addressPostal" type="text" value="{{employee.addressPostal}}">
+                            <input class="form-control" id="addressPostal" name="addressPostal" type="text" value="{{viewData.employee.dataValues.addressPostal}}">
                         </div>
                     </div>
                 </div>
@@ -67,39 +67,40 @@
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="isManager">Manager:</label>
-                            <input class="form-control" type="checkbox" id="isManager" name="isManager" {{#if employee.isManager}}checked=""{{/if}}>
+                            <input class="form-control" type="checkbox" id="isManager" name="isManager" {{#if viewData.employee.dataValues.isManager}}checked=""{{/if}}>
                         </div>
                     </div>
 
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="employeeManagerNum">Employee's Manager Number:</label>
-                            <input class="form-control" id="employeeManagerNum" name="employeeManagerNum" type="text" value="{{employee.employeeManagerNum}}">
+                            <input class="form-control" id="employeeManagerNum" name="employeeManagerNum" type="text" value="{{viewData.employee.dataValues.employeeManagerNum}}">
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
                             <label>Status:</label><br>
                             <label class="checkbox-inline">
-                                <input type="radio" id="statusFT" name="status" {{#equal employee.status "Full Time"}}checked=""{{/equal}} value="Full Time"> Full Time
+                                <input type="radio" id="statusFT" name="status" {{#equal viewData.employee.dataValues.status "Full Time"}}checked=""{{/equal}} value="Full Time"> Full Time
                             </label>
                             <label class="checkbox-inline">
-                                <input type="radio" id="statusPT" name="status"  {{#equal employee.status "Part Time"}}checked=""{{/equal}} value="Part Time"> Part Time
+                                <input type="radio" id="statusPT" name="status"  {{#equal viewData.employee.dataValues.status "Part Time"}}checked=""{{/equal}} value="Part Time"> Part Time
                             </label>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="department">Department</label>
-                            <select class="form-control" name="department" id="department">
-                                <option value="1" {{#equal employee.department "1" }} selected {{/equal}}>Creative Services</option>
-                                <option value="2" {{#equal employee.department "2" }} selected {{/equal}}>Product Development</option>
-                                <option value="3" {{#equal employee.department "3" }} selected {{/equal}}>Marketing</option>
-                                <option value="4" {{#equal employee.department "4" }} selected {{/equal}}>Strategic Planning</option>
-                                <option value="5" {{#equal employee.department "5" }} selected {{/equal}}>Accounting</option>
-                                <option value="6" {{#equal employee.department "6" }} selected {{/equal}}>Human Resources</option>
-                                <option value="7" {{#equal employee.department "7" }} selected {{/equal}}>Quality Analysis</option>
-                            </select>
+                            {{#if viewData.departments}}
+                                <select class="form-control" name="department" id="department">
+                                    <option value="">Select Department</option>
+                                    {{#each viewData.departments}}
+                                        <option value="{{this.dataValues.departmentId}}" {{#if this.selected}} selected {{/if}} >{{this.dataValues.departmentName}} </option>
+                                    {{/each}}
+                                </select>
+                            {{else}}
+                                <div>No Departments</div>
+                            {{/if}}
                         </div>
                     </div>
                 </div>
@@ -107,7 +108,7 @@
                     <div class="col-md-12">
                         <div class="form-group">
                             <label for="hireDate">Hire Date</label>
-                            <input class="form-control" id="hireDate" name="hireDate" type="text" value="{{employee.hireDate}}" readonly="">
+                            <input class="form-control" id="hireDate" name="hireDate" type="text" value="{{viewData.employee.dataValues.hireDate}}" readonly="">
                         </div>
                     </div>
                 </div>
