--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -21,7 +21,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <span class="navbar-brand" href="#">WEB322 - Student Name</span>
+            <span class="navbar-brand" href="#">WEB322 - Hayaturehman Ahmadzai</span>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -29,8 +29,6 @@
             <ul class="nav navbar-nav">
                 {{#navLink "/"}}Home{{/navLink}}
                 {{#navLink "/about"}}About{{/navLink}}
-                {{#navLink "/employees/add"}}Add Employee{{/navLink}}
-                {{#navLink "/images/add"}}Add Image{{/navLink}}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {{#navLink "/images"}}Images{{/navLink}}
