--- a/public/css/site.css
+++ b/public/css/site.css
@@ -73,6 +73,7 @@ input[type="submit"], button {
     border-radius: 5px;
     background-color: #636770 !important;
     font-weight: 400;
+    color: #d7d7d7 !important;
 }
 
 input[type="submit"]:hover, button {
